function(glCreateSampleGTC NAME)
	set(SAMPLE_NAME ogl-${GL_VERSION_GTC}-${NAME})
	set(SHADER_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../data/${GL_VERSION_GTC})

	foreach(FILE ${GL_SHADER_GTC})
 		set(SHADER_PATH ${SHADER_PATH} ${SHADER_DIR}/${FILE})
	endforeach(FILE)

	source_group("Shader Files" FILES ${SHADER_PATH})
	add_executable(${SAMPLE_NAME} ogl-${GL_VERSION_GTC}-${NAME} ${SHADER_PATH})
	add_dependencies(${SAMPLE_NAME} ${TARGET_DATA_COPY})
	target_link_libraries(${SAMPLE_NAME} ${BINARY_FILES})
endfunction(glCreateSampleGTC)

#add_subdirectory(ogl-alpha-discard)
#add_subdirectory(ogl-alpha-test)
#add_subdirectory(ogl-alpha-to-coverage)

#add_subdirectory(ogl-buffer-render)
#add_subdirectory(ogl-buffer-streaming)
#add_subdirectory(ogl-buffer-texture)

if(APPLE)

# OpenGL 2.1 samples
set(GL_VERSION_GTC 210)

set(GL_SHADER_GTC flat-color.vert flat-color.frag)
glCreateSampleGTC(buffer-type)
glCreateSampleGTC(buffer-update)
glCreateSampleGTC(draw-elements)
glCreateSampleGTC(draw-range)

set(GL_SHADER_GTC image-2d.vert image-2d.frag)
glCreateSampleGTC(image-2d)
glCreateSampleGTC(image-2d-compressed)

set(GL_SHADER_GTC flat-color.vert flat-color.frag)
glCreateSampleGTC(query-occlusion)
glCreateSampleGTC(rasterizer-viewport)

set(GL_SHADER_GTC image-2d.vert image-2d.frag)
glCreateSampleGTC(sampler-anisotropy-ext)
glCreateSampleGTC(sampler-filter)
glCreateSampleGTC(sampler-wrap)

set(GL_SHADER_GTC flat-color.vert flat-color.frag)
glCreateSampleGTC(test-scissor)

else(APPLE)

# OpenGL 2.1 samples
set(GL_VERSION_GTC 210)

set(GL_SHADER_GTC flat-color.vert flat-color.frag)
glCreateSampleGTC(buffer-type)
glCreateSampleGTC(buffer-update)
glCreateSampleGTC(draw-elements)
glCreateSampleGTC(draw-range)

set(GL_SHADER_GTC image-2d.vert image-2d.frag)
glCreateSampleGTC(texture-2d)
glCreateSampleGTC(texture-compressed-ext)

set(GL_SHADER_GTC flat-color.vert flat-color.frag)
glCreateSampleGTC(query-occlusion)
glCreateSampleGTC(rasterizer-viewport)

set(GL_SHADER_GTC image-2d.vert image-2d.frag)
glCreateSampleGTC(sampler-anisotropy-ext)
glCreateSampleGTC(sampler-filter)
glCreateSampleGTC(sampler-wrap)

set(GL_SHADER_GTC flat-color.vert flat-color.frag)
glCreateSampleGTC(test-scissor)

# OpenGL 3.0 samples
set(GL_VERSION_GTC 300)

set(GL_SHADER_GTC image-2d.vert image-2d.frag)

glCreateSampleGTC(fbo-multisample)

# OpenGL 3.3 samples
set(GL_VERSION_GTC 330)

set(GL_SHADER_GTC blend-index.vert blend-index.frag)
glCreateSampleGTC(blend-index)
set(GL_SHADER_GTC mrt.vert mrt.frag image-2d.vert image-2d.frag)
glCreateSampleGTC(blend-rtt)
set(GL_SHADER_GTC flat-color.vert flat-color.frag)
glCreateSampleGTC(buffer-type)
set(GL_SHADER_GTC uniform-buffer.vert uniform-buffer.frag)
glCreateSampleGTC(buffer-uniform)
glCreateSampleGTC(buffer-uniform-shared)
set(GL_SHADER_GTC flat-color.vert flat-color.frag)
glCreateSampleGTC(buffer-update)
set(GL_SHADER_GTC instanced.vert instanced-array.frag)
glCreateSampleGTC(draw-instanced)
set(GL_SHADER_GTC instanced.vert instanced-array.frag)
glCreateSampleGTC(draw-instanced-array)
set(GL_SHADER_GTC flat-color.vert flat-color.frag)
glCreateSampleGTC(draw-multiple)
set(GL_SHADER_GTC image-2d.vert image-2d.frag)
glCreateSampleGTC(fbo-blit)
set(GL_SHADER_GTC rtt-array.vert rtt-array.frag layer.vert layer.geom layer.frag)
glCreateSampleGTC(fbo-layered)
glCreateSampleGTC(fbo-mipmaps)
set(GL_SHADER_GTC image-2d.vert image-2d.frag multiple-output.vert multiple-output.frag)
glCreateSampleGTC(fbo-rtt)
set(GL_SHADER_GTC rtt-array.vert rtt-array.frag multiple-output.vert multiple-output.frag)
glCreateSampleGTC(fbo-rtt-texture-array)
set(GL_SHADER_GTC image-2d.vert image-2d.frag)
glCreateSampleGTC(fbo-multisample)
glCreateSampleGTC(fbo-srgb)
glCreateSampleGTC(texture-2d)
glCreateSampleGTC(texture-compressed-ext)
glCreateSampleGTC(texture-swizzle)
set(GL_SHADER_GTC texture-array.vert texture-array.frag)
glCreateSampleGTC(texture-array)
set(GL_SHADER_GTC texture-cube.vert texture-cube.frag)
glCreateSampleGTC(texture-cube)
set(GL_SHADER_GTC texture-rect.vert texture-rect.frag)
glCreateSampleGTC(texture-rect)
set(GL_SHADER_GTC texture-buffer.vert texture-buffer.frag)
glCreateSampleGTC(texture-buffer)
set(GL_SHADER_GTC flat-color.vert flat-color.geom flat-color.frag)
glCreateSampleGTC(primitive-shader)
set(GL_SHADER_GTC flat-color.vert flat-color.frag)
glCreateSampleGTC(query-conditional)
glCreateSampleGTC(query-occlusion)
glCreateSampleGTC(query-timer)
glCreateSampleGTC(rasterizer-viewport)
set(GL_SHADER_GTC r2vb1.vert r2vb1.frag r2vb2.vert r2vb2.frag)
#glCreateSampleGTC(render2vertexbuffer)
set(GL_SHADER_GTC image-2d.vert image-2d.frag)
glCreateSampleGTC(sampler-anisotropy-ext)
glCreateSampleGTC(sampler-filter)
glCreateSampleGTC(sampler-object)
glCreateSampleGTC(sampler-wrap)
set(GL_SHADER_GTC fetch.vert fetch.frag)
glCreateSampleGTC(sampler-fetch)
set(GL_SHADER_GTC image-2d.vert image-2d.frag)
glCreateSampleGTC(test-scissor)
set(GL_SHADER_GTC flat-color.vert flat-color.frag transformed.vert)
glCreateSampleGTC(transform-feedback)

# OpenGL 4.0 samples
set(GL_VERSION_GTC 400)

set(GL_SHADER_GTC mrt.vert mrt.frag image-2d.vert image-2d.frag)
glCreateSampleGTC(blend-rtt)
set(GL_SHADER_GTC uniform-buffer.vert uniform-buffer.frag)
glCreateSampleGTC(buffer-uniform)
#glCreateSampleGTC(buffer-uniform-shared)

set(GL_SHADER_GTC flat-color.vert flat-color.frag)
glCreateSampleGTC(draw-indirect)

set(GL_SHADER_GTC rtt-array.vert rtt-array.frag layer.vert layer.geom layer.frag)
glCreateSampleGTC(fbo-layered)
set(GL_SHADER_GTC multisample.vert multisample.frag)
glCreateSampleGTC(fbo-multisample)
set(GL_SHADER_GTC image-2d.vert image-2d.frag)
glCreateSampleGTC(fbo-rtt)
set(GL_SHADER_GTC rtt-array.vert rtt-array.frag)
glCreateSampleGTC(fbo-rtt-texture-array)

set(GL_SHADER_GTC double.vert double.frag)
glCreateSampleGTC(program-64)
set(GL_SHADER_GTC subroutine.vert subroutine.frag)
glCreateSampleGTC(program-subroutine)
set(GL_SHADER_GTC tess-block.vert tess-block.cont tess-block.eval tess-block.geom tess-block.frag)
glCreateSampleGTC(program-varying-blocks)
set(GL_SHADER_GTC tess-struct.vert tess-struct.cont tess-struct.eval tess-struct.geom tess-struct.frag)
glCreateSampleGTC(program-varying-structs)

set(GL_SHADER_GTC primitive-instancing.vert primitive-instancing.geom primitive-instancing.frag)
glCreateSampleGTC(primitive-instanced)
set(GL_SHADER_GTC tess.vert tess.cont tess.eval tess.geom tess.frag)
glCreateSampleGTC(primitive-tessellation)

set(GL_SHADER_GTC fetch.vert fetch.frag)
glCreateSampleGTC(sampler-fetch)
set(GL_SHADER_GTC gather.vert gather.frag)
glCreateSampleGTC(sampler-gather)
set(GL_SHADER_GTC sampler-array.vert sampler-array.frag)
#glCreateSampleGTC(sampler-array)

set(GL_SHADER_GTC texture-buffer.vert texture-buffer.frag)
glCreateSampleGTC(texture-buffer-rgb)
set(GL_SHADER_GTC image-2d.vert image-2d.frag)
glCreateSampleGTC(texture-compressed-arb)

set(GL_SHADER_GTC flat-color.vert flat-color.frag transformed.vert transformed.frag)
glCreateSampleGTC(transform-feedback-object)

# OpenGL 4.1 samples
set(GL_VERSION_GTC 410)

set(GL_SHADER_GTC primitive-instancing.vert primitive-instancing.geom primitive-instancing.frag)
glCreateSampleGTC(primitive-instanced)
set(GL_SHADER_GTC viewport.vert viewport.geom viewport.frag layer.vert layer.geom layer.frag)
glCreateSampleGTC(fbo-layered)
set(GL_SHADER_GTC separate.vert separate.frag)
glCreateSampleGTC(debug-output)
set(GL_SHADER_GTC tess.vert tess.cont tess.eval tess.geom tess.frag)
glCreateSampleGTC(primitive-tessellation)
set(GL_SHADER_GTC double.vert double.frag)
glCreateSampleGTC(program-64)
set(GL_SHADER_GTC separate.vert separate.frag)
glCreateSampleGTC(program-binary)
glCreateSampleGTC(program-separate)

# OpenGL Future
set(GL_VERSION_GTC 410)

set(GL_SHADER_GTC uniform-buffer.vert uniform-buffer.frag)
glCreateSampleGTC(buffer-uniform-ext)

set(GL_VERSION_GTC 4XX)
set(GL_SHADER_GTC image-2d.vert image-2d.frag)
glCreateSampleGTC(fbo-multisample-ext)
set(GL_SHADER_GTC image-2d.vert image-2d.frag multiple-output.vert multiple-output.frag)
glCreateSampleGTC(fbo-rtt-ext)
set(GL_SHADER_GTC image-texture.vert image-texture.frag)
glCreateSampleGTC(image-texture-ext)
set(GL_SHADER_GTC double.vert double.frag)
glCreateSampleGTC(program-64-ext)
#set(GL_SHADER_GTC separate.vert separate.frag)
#glCreateSampleGTC(program-separate-ext)
set(GL_SHADER_GTC fetch.vert fetch.frag)
glCreateSampleGTC(sampler-fetch-ext)

endif(APPLE)
